Prefer List.of API