@@ -1,7 +1,6 @@
 package mill.constants;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 public class CodeGenConstants {
@@ -24,23 +23,17 @@ public class CodeGenConstants {
   /**
    * The name of the root build file
    */
-  public static final List<String> rootBuildFileNames = Collections.unmodifiableList(Arrays.asList(
-    "build.mill", "build.mill.scala", "build.sc"
-  ));
+  public static final List<String> rootBuildFileNames = List.of("build.mill", "build.mill.scala", "build.sc");
 
   /**
    * The name of any sub-folder build files
    */
-  public static final List<String> nestedBuildFileNames = Collections.unmodifiableList(Arrays.asList(
-    "package.mill", "package.mill.scala", "package.sc"
-  ));
+  public static final List<String> nestedBuildFileNames = List.of("package.mill", "package.mill.scala", "package.sc");
 
   /**
    * The extensions used by build files
    */
-  public static final List<String> buildFileExtensions = Collections.unmodifiableList(Arrays.asList(
-    "mill", "mill.scala", "sc"
-  ));
+  public static final List<String> buildFileExtensions = List.of("mill", "mill.scala", "sc");
 
   /**
    * The user-facing name for the root of the module tree.
